--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .contactLink {
-    color: black;
+    color: #FFFFFF;
+}
+
+body {
+    color: #FFFFFF;
+    background-image: linear-gradient(#0093E9, #80D0C7);
+}
+
+.accordion {
+    color: #000000;
 }
