--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 .nav-link {
-    color: #FFFFFF;
+    color: #000000;
 }
 
-.contactLink {
-    color: #FFFFFF;
+.blackLink {
+    color: #000000;
 }
 
 .navbar {
-    background-color: #0093E9;
+    background-color: #FFFFFF;
 }
 
 body {
-    color: #FFFFFF;
-    background-image: linear-gradient(#0093E9, #80D0C7);
+    color: #000000;
+    background-color: #FFFFFF;
 }
 
 .accordion {
